--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,42 @@
-name: Python package
+---
+name: Test and Lint
 
-on: [push]
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-
+        # Officially supported Python versions: https://devguide.python.org/versions/
+        python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      - name: Install poetry
+        run: pipx install poetry
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: actions/cache@v2
-        with:
-          path: ${{ env.pythonLocation }}
-          key: ${{ env.pythonLocation }}-${{ hashFiles('poetry.lock') }} }}
+          cache: poetry
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry install
-      - name: 🔬 Lint with flake8
-        run: |
-          poetry run flake8
-      - name: 🧬 Typecheck with pyright
-        run: |
-          poetry run pyright
+        run: poetry install
       - name: 🧪 Test with pytest
-        run: |
-          poetry run pytest
+        run: poetry run pytest
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install poetry
+        run: pipx install poetry
+      - name: Install dependencies
+        run: poetry install
+      - name: 🔬 Lint with flake8
+        run: poetry run flake8
+      - name: 🧬 Typecheck with pyright
+        run: poetry run pyright
