chore(ci): ignore errors on python 3.12

--- a/.github/workflows/flow-test-and-lint.yaml
+++ b/.github/workflows/flow-test-and-lint.yaml
@@ -10,11 +10,16 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
         # Officially supported Python versions:
         # https://devguide.python.org/versions/
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        experimental: [false]
+        include:
+          - python-version: "3.12"
+            experimental: true
     steps:
       - uses: actions/checkout@v4
       - name: Install poetry
